# deepagents

./: README.md  deepagents.spec  example-config-ollama.json  example-config.json  example-mcp-config.json  pyproject.toml  sampleserver.py  test_cli.py  test_completion_only.py  test_langgraph.py  test_metaagent.py  test_ollama.py  user_instructions.yaml
.github/workflows/: main.yml
scripts/: generate_pyinstaller_spec.py
src/deepagents/: __init__.py  cli.py  debug_utils.py  graph.py  model.py  sub_agent.py  tools.py
