[project]
name = "deepagents"
version = "0.0.3"
description = "General purpose 'deep agent' with sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "prompt_toolkit>=3.0.47",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "pyinstaller>=6.15.0",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langchain-openai>=0.3.30",
    "aiosqlite>=0.20.0",
    "fastmcp>=2.11.3",
]

[project.scripts]
deepagents-cli = "deepagents.cli:main"


[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepagents"]
[tool.setuptools.package-dir]
"deepagents" = "src/deepagents"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]
